--- a/styles/index.css
+++ b/styles/index.css
@@ -8,14 +8,40 @@
 }
 
 body {
+  position: relative;
   font-size: 14px;
   color: #000000;
   font-family: 'Roboto';
 }
 
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+.slider {
+  display: flex;
+}
+
+.sider {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  padding: 20px;
+  flex-basis: 30%;
+  line-height: 1.4;
+  background-color: #ffeaab;
 }
 
 .nav,
