--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@
 body {
   position: relative;
   font-size: 14px;
-  color: #000000;
+  color: #ffffff;
   font-family: 'Roboto';
 }
 
@@ -41,19 +41,19 @@ body::before {
   padding: 20px;
   flex-basis: 30%;
   line-height: 1.4;
-  background-color: #ffeaab;
+  background-color: #049688;
 }
 
 .nav,
 .footer {
   display: flex;
-  background-color: #ffeaab;
+  background-color: #049688;
   padding: 10px 20px;
 }
 
 .link {
   margin-right: 15px;
-  color: #000000;
+  color: #ffffff;
   font-weight: 600;
   font-size: 18px;
   text-decoration: none;
